tests/machine/x/fs/two-sum.error
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/machine/x/fs/two-sum.fs(2,1): warning FS0221: The declarations in this file will be placed in an implicit module 'Two-sum' based on the file name 'two-sum.fs'. However this is not a valid F# identifier, so the contents will not be accessible from other files. Consider renaming the file or adding a 'module' or 'namespace' declaration at the top of the file.

/workspace/mochi/tests/machine/x/fs/two-sum.fs(5,18): error FS0001: This expression was expected to have type
    obj    
but here has type
    int    

/workspace/mochi/tests/machine/x/fs/two-sum.fs(6,24): error FS0001: The type 'int' does not match the type 'obj'

/workspace/mochi/tests/machine/x/fs/two-sum.fs(7,32): error FS0001: The type 'int' does not match the type 'obj'

/workspace/mochi/tests/machine/x/fs/two-sum.fs(8,16): error FS0752: The operator 'expr.[idx]' has been used on an object of indeterminate type based on information prior to this program point. Consider adding further type constraints

/workspace/mochi/tests/machine/x/fs/two-sum.fs(8,27): error FS0752: The operator 'expr.[idx]' has been used on an object of indeterminate type based on information prior to this program point. Consider adding further type constraints

/workspace/mochi/tests/machine/x/fs/two-sum.fs(9,17): error FS0001: This expression was expected to have type
    unit    
but here has type
    'a list    

/workspace/mochi/tests/machine/x/fs/two-sum.fs(11,19): error FS0001: This expression was expected to have type
    obj    
but here has type
    int list    

/workspace/mochi/tests/machine/x/fs/two-sum.fs(12,15): error FS0039: The field, constructor or member 'Item' is not defined

/workspace/mochi/tests/machine/x/fs/two-sum.fs(13,15): error FS0039: The field, constructor or member 'Item' is not defined
